--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -7,7 +7,7 @@
     </button>
     <!-- Brand -->
     <a class="navbar-brand pt-0" routerLinkActive="active" [routerLink]="['/dashboard']">
-      <img src="./assets/img/brand/red.png" class="navbar-brand-img" alt="...">
+      <!--<img src="./assets/img/brand/red.png" class="navbar-brand-img" alt="...">-->
     </a>
     <!-- User -->
     <ul class="nav align-items-center d-md-none">
@@ -99,9 +99,9 @@
       <!-- Divider -->
       <hr class="my-3">
       <!-- Heading -->
-      <h6 class="navbar-heading text-muted">Documentation</h6>
+      <!--<h6 class="navbar-heading text-muted">Documentation</h6>-->
       <!-- Navigation -->
-      <ul class="navbar-nav mb-md-3">
+      <!--<ul class="navbar-nav mb-md-3">
         <li class="nav-item">
           <a class="nav-link" href="https://demos.creative-tim.com/argon-dashboard-angular/documentation/tutorial">
             <i class="ni ni-spaceship"></i> Getting started
@@ -117,7 +117,7 @@
             <i class="ni ni-ui-04"></i> Components
           </a>
         </li>
-      </ul>
+      </ul>-->
     </div>
   </div>
 </nav>
