--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -37,13 +37,19 @@
           <div class="text-center text-muted mb-4">
             <small>Inicio de Sesión</small>
           </div>
-          <form role="form">
+          <form
+                  role="form"
+                  #f="ngForm"
+                  class="form-horizontal"
+                  novalidate
+                  (ngSubmit)="submit(f.value, f.valid)"
+                >
             <div class="form-group mb-3">
               <div class="input-group input-group-alternative">
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="ni ni-badge"></i></span>
                 </div>
-                <input class="form-control" placeholder="Usuario" type="text">
+                <input class="form-control" required placeholder="Usuario" type="text" name="user" [ngModel]="user" #user="ngModel">
               </div>
             </div>
             <div class="form-group">
@@ -51,7 +57,7 @@
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
                 </div>
-                <input class="form-control" placeholder="Contraseña" type="password">
+                <input class="form-control" required placeholder="Contraseña" type="password" name="password" [ngModel]="password" #password="ngModel">
               </div>
             </div>
             <!--<div class="custom-control custom-control-alternative custom-checkbox">
@@ -61,7 +67,7 @@
               </label>
             </div>-->
             <div class="text-center">
-              <button type="button" class="btn btn-primary my-4">Iniciar Sesión</button>
+              <button type="submit" class="btn btn-primary my-4">Iniciar Sesión</button>
             </div>
           </form>
         </div>
