--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -49,7 +49,7 @@
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="ni ni-badge"></i></span>
                 </div>
-                <input class="form-control" required placeholder="Usuario" type="text" name="user" [ngModel]="user" #user="ngModel">
+                <input class="form-control" required placeholder="Usuario" type="text" name="user" value="" [ngModel]="user" #user="ngModel">
               </div>
             </div>
             <div class="form-group">
@@ -57,7 +57,7 @@
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
                 </div>
-                <input class="form-control" required placeholder="Contraseña" type="password" name="password" [ngModel]="password" #password="ngModel">
+                <input class="form-control" required placeholder="Contraseña" type="password" name="password" value="" [ngModel]="password" #password="ngModel">
               </div>
             </div>
             <!--<div class="custom-control custom-control-alternative custom-checkbox">
@@ -66,6 +66,9 @@
                 <span class="text-muted">Remember me</span>
               </label>
             </div>-->
+            <small [hidden]="!invalidForm" class="text-danger">
+              Algún campo no fue llenado.
+            </small>
             <div class="text-center">
               <button type="submit" class="btn btn-primary my-4">Iniciar Sesión</button>
             </div>
@@ -76,9 +79,9 @@
         <div class="col-6">
           <a href="javascript:void(0)" class="text-light"><small>Olvidé mi contraseña</small></a>
         </div>
-        <div class="col-6 text-right">
-          <!--<a href="javascript:void(0)" class="text-light"><small>Create new account</small></a>-->
-        </div>
+        <!-- <div class="col-6 text-right">
+          <a href="javascript:void(0)" class="text-light"><small>Datos incorrecto</small></a>
+        </div> -->
       </div>
     </div>
   </div>
