--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -37,19 +37,13 @@
           <div class="text-center text-muted mb-4">
             <small>Inicio de Sesión</small>
           </div>
-          <form
-                  role="form"
-                  #f="ngForm"
-                  class="form-horizontal"
-                  novalidate
-                  (ngSubmit)="submit(f.value, f.valid)"
-                >
+          <form #f="ngForm" class="form-horizontal" novalidate (ngSubmit)="submit(f.value, f.valid)">
             <div class="form-group mb-3">
               <div class="input-group input-group-alternative">
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="ni ni-badge"></i></span>
                 </div>
-                <input class="form-control" required placeholder="Usuario" type="text" name="user" value="" [ngModel]="user" #user="ngModel">
+                <input class="form-control" required placeholder="Usuario" type="text" name="user" [ngModel]="user.valueAccessor.viewModel" #user="ngModel">
               </div>
             </div>
             <div class="form-group">
@@ -57,7 +51,7 @@
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
                 </div>
-                <input class="form-control" required placeholder="Contraseña" type="password" name="password" value="" [ngModel]="password" #password="ngModel">
+                <input class="form-control" required placeholder="Contraseña" type="password" name="password" [ngModel]="password.valueAccessor.viewModel" #password="ngModel">
               </div>
             </div>
             <!--<div class="custom-control custom-control-alternative custom-checkbox">
@@ -69,6 +63,11 @@
             <small [hidden]="!invalidForm" class="text-danger">
               Algún campo no fue llenado.
             </small>
+
+            <small [hidden]="!invalidPassForm" class="text-danger">
+              Datos incorrectos
+            </small>
+
             <div class="text-center">
               <button type="submit" class="btn btn-primary my-4">Iniciar Sesión</button>
             </div>
