--- a/src/app/pages/maps/maps.component.html
+++ b/src/app/pages/maps/maps.component.html
@@ -8,7 +8,7 @@
             <div class="card-body">
               <div class="row">
                 <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">Traffic</h5>
+                  <h5 class="card-title text-uppercase text-muted mb-0">Estadísticas</h5>
                   <span class="h2 font-weight-bold mb-0">350,897</span>
                 </div>
                 <div class="col-auto">
@@ -19,7 +19,7 @@
               </div>
               <p class="mt-3 mb-0 text-muted text-sm">
                 <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
-                <span class="text-nowrap">Since last month</span>
+                <span class="text-nowrap"> Desde el mes pasado</span>
               </p>
             </div>
           </div>
@@ -29,7 +29,7 @@
             <div class="card-body">
               <div class="row">
                 <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">New users</h5>
+                  <h5 class="card-title text-uppercase text-muted mb-0">Nuevos usuarios</h5>
                   <span class="h2 font-weight-bold mb-0">2,356</span>
                 </div>
                 <div class="col-auto">
@@ -40,7 +40,7 @@
               </div>
               <p class="mt-3 mb-0 text-muted text-sm">
                 <span class="text-danger mr-2"><i class="fas fa-arrow-down"></i> 3.48%</span>
-                <span class="text-nowrap">Since last week</span>
+                <span class="text-nowrap">Desde el mes pasado</span>
               </p>
             </div>
           </div>
@@ -50,8 +50,8 @@
             <div class="card-body">
               <div class="row">
                 <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">Sales</h5>
-                  <span class="h2 font-weight-bold mb-0">924</span>
+                  <h5 class="card-title text-uppercase text-muted mb-0">Basura recolectada</h5>
+                  <span class="h2 font-weight-bold mb-0">924 basureros</span>
                 </div>
                 <div class="col-auto">
                   <div class="icon icon-shape bg-yellow text-white rounded-circle shadow">
@@ -61,7 +61,7 @@
               </div>
               <p class="mt-3 mb-0 text-muted text-sm">
                 <span class="text-warning mr-2"><i class="fas fa-arrow-down"></i> 1.10%</span>
-                <span class="text-nowrap">Since yesterday</span>
+                <span class="text-nowrap">Desde el mes pasado</span>
               </p>
             </div>
           </div>
@@ -71,7 +71,7 @@
             <div class="card-body">
               <div class="row">
                 <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">Performance</h5>
+                  <h5 class="card-title text-uppercase text-muted mb-0">Rutas completadas</h5>
                   <span class="h2 font-weight-bold mb-0">49,65%</span>
                 </div>
                 <div class="col-auto">
@@ -82,7 +82,7 @@
               </div>
               <p class="mt-3 mb-0 text-muted text-sm">
                 <span class="text-success mr-2"><i class="fas fa-arrow-up"></i> 12%</span>
-                <span class="text-nowrap">Since last month</span>
+                <span class="text-nowrap">Hoy</span>
               </p>
             </div>
           </div>
@@ -97,6 +97,7 @@
     <div class="col">
       <div class="card shadow border-0">
         <div id="map-canvas" class="map-canvas" data-lat="40.748817" data-lng="-73.985428" style="height: 600px;"></div>
+        <!--<div class="mapouter map-canvas"><div class="gmap_canvas"><iframe width="600" height="985" id="gmap_canvas" src="https://maps.google.com/maps?q=Ciudad%20de%20Guatemala&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.online-timer.net"></a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}</style><a href="https://www.embedgooglemap.net">how to make a website map</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div></div>-->
       </div>
     </div>
   </div>
