--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -43,7 +43,7 @@
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="ni ni-badge"></i></span>
                 </div>
-                <input class="form-control" required placeholder="Usuario" type="text" name="user" [ngModel]="user.valueAccessor.viewModel" #user="ngModel">
+                <input class="form-control" required placeholder="Usuario" type="text" name="username" [ngModel]="username.valueAccessor.viewModel" #username="ngModel">
               </div>
             </div>
             <div class="form-group">
