--- a/src/app/pages/user-profile/user-profile.component.html
+++ b/src/app/pages/user-profile/user-profile.component.html
@@ -5,9 +5,9 @@
   <div class="container-fluid d-flex align-items-center">
     <div class="row">
       <div class="col-lg-7 col-md-10">
-        <h1 class="display-2 text-white">Hello Jesse</h1>
-        <p class="text-white mt-0 mb-5">This is your profile page. You can see the progress you've made with your work and manage your projects or assigned tasks</p>
-        <a href="#!" class="btn btn-info">Edit profile</a>
+        <h1 class="display-2 text-white">Hola Jessica</h1>
+        <p class="text-white mt-0 mb-5">Esta es tu página de perfil. Puedes ver el progreso que has hecho con tu trabajo y gestionar tus proyectos o tareas asignadas.</p>
+        <a href="#!" class="btn btn-info">Editar Perfil</a>
       </div>
     </div>
   </div>
@@ -27,8 +27,8 @@
         </div>
         <div class="card-header text-center border-0 pt-8 pt-md-4 pb-0 pb-md-4">
           <div class="d-flex justify-content-between">
-            <a href="javascript:void(0)" class="btn btn-sm btn-info mr-4">Connect</a>
-            <a href="javascript:void(0)" class="btn btn-sm btn-default float-right">Message</a>
+            <a href="javascript:void(0)" class="btn btn-sm btn-info mr-4">Ver Rutas</a>
+            <a href="javascript:void(0)" class="btn btn-sm btn-default float-right">Ver Estadisticas</a>
           </div>
         </div>
         <div class="card-body pt-0 pt-md-4">
@@ -37,15 +37,15 @@
               <div class="card-profile-stats d-flex justify-content-center mt-md-5">
                 <div>
                   <span class="heading">22</span>
-                  <span class="description">Friends</span>
+                  <span class="description">Rutas Asignadas</span>
                 </div>
                 <div>
-                  <span class="heading">10</span>
-                  <span class="description">Photos</span>
+                  <span class="heading">#10</span>
+                  <span class="description">Siguiente Ruta</span>
                 </div>
                 <div>
-                  <span class="heading">89</span>
-                  <span class="description">Comments</span>
+                  <span class="heading">12</span>
+                  <span class="description">Rutas Completadas</span>
                 </div>
               </div>
             </div>
@@ -55,17 +55,17 @@
               Jessica Jones<span class="font-weight-light">, 27</span>
             </h3>
             <div class="h5 font-weight-300">
-              <i class="ni location_pin mr-2"></i>Bucharest, Romania
+              <i class="ni location_pin mr-2"></i>Ciudad de Guatemala, Guatemala
             </div>
             <div class="h5 mt-4">
-              <i class="ni business_briefcase-24 mr-2"></i>Solution Manager - Creative Tim Officer
+              <i class="ni business_briefcase-24 mr-2"></i>Piloto - Ciudad de Guatemala y Villa Nueva
             </div>
             <div>
-              <i class="ni education_hat mr-2"></i>University of Computer Science
+              <i class="ni education_hat mr-2"></i>Graduado de Ingeniería en Informática y Sistemas
             </div>
             <hr class="my-4" />
-            <p>Ryan — the name taken by Melbourne-raised, Brooklyn-based Nick Murphy — writes, performs and records all of his own music.</p>
-            <a href="javascript:void(0)">Show more</a>
+            <p>Tiempo laborando: 1 año. Tiempo de transporte: 202h</p>
+            <a href="javascript:void(0)">Mostrar Más</a>
           </div>
         </div>
       </div>
@@ -75,27 +75,27 @@
         <div class="card-header bg-white border-0">
           <div class="row align-items-center">
             <div class="col-8">
-              <h3 class="mb-0">My account</h3>
+              <h3 class="mb-0">Mi Cuenta</h3>
             </div>
             <div class="col-4 text-right">
-              <a href="#!" class="btn btn-sm btn-primary">Settings</a>
+              <a href="#!" class="btn btn-sm btn-primary">Configuración</a>
             </div>
           </div>
         </div>
         <div class="card-body">
           <form>
-            <h6 class="heading-small text-muted mb-4">User information</h6>
+            <h6 class="heading-small text-muted mb-4">Información de Usuario</h6>
             <div class="pl-lg-4">
               <div class="row">
                 <div class="col-lg-6">
                   <div class="form-group">
-                    <label class="form-control-label" for="input-username">Username</label>
-                    <input type="text" id="input-username" class="form-control form-control-alternative" placeholder="Username" value="lucky.jesse">
+                    <label class="form-control-label" for="input-userNombre">Nombre de Usuario</label>
+                    <input type="text" id="input-userNombre" class="form-control form-control-alternative" placeholder="UserNombre" value="lucky.jesse">
                   </div>
                 </div>
                 <div class="col-lg-6">
                   <div class="form-group">
-                    <label class="form-control-label" for="input-email">Email address</label>
+                    <label class="form-control-label" for="input-email">Correo Electrónico</label>
                     <input type="email" id="input-email" class="form-control form-control-alternative" placeholder="jesse@example.com">
                   </div>
                 </div>
@@ -103,46 +103,46 @@
               <div class="row">
                 <div class="col-lg-6">
                   <div class="form-group">
-                    <label class="form-control-label" for="input-first-name">First name</label>
-                    <input type="text" id="input-first-name" class="form-control form-control-alternative" placeholder="First name" value="Lucky">
+                    <label class="form-control-label" for="input-Primer-Nombre">Primer Nombre</label>
+                    <input type="text" id="input-Primer-Nombre" class="form-control form-control-alternative" placeholder="Primer Nombre" value="Lucky">
                   </div>
                 </div>
                 <div class="col-lg-6">
                   <div class="form-group">
-                    <label class="form-control-label" for="input-last-name">Last name</label>
-                    <input type="text" id="input-last-name" class="form-control form-control-alternative" placeholder="Last name" value="Jesse">
+                    <label class="form-control-label" for="input-Ultimo-Nombre">Ultimo Nombre</label>
+                    <input type="text" id="input-Ultimo-Nombre" class="form-control form-control-alternative" placeholder="Ultimo Nombre" value="Jesse">
                   </div>
                 </div>
               </div>
             </div>
             <hr class="my-4" />
             <!-- Address -->
-            <h6 class="heading-small text-muted mb-4">Contact information</h6>
+            <h6 class="heading-small text-muted mb-4">Información de Contacto</h6>
             <div class="pl-lg-4">
               <div class="row">
                 <div class="col-md-12">
                   <div class="form-group">
-                    <label class="form-control-label" for="input-address">Address</label>
-                    <input id="input-address" class="form-control form-control-alternative" placeholder="Home Address" value="Bld Mihail Kogalniceanu, nr. 8 Bl 1, Sc 1, Ap 09" type="text">
+                    <label class="form-control-label" for="input-address">Dirección</label>
+                    <input id="input-address" class="form-control form-control-alternative" placeholder="Home Address" value="1era Av, 1-01, Zona 1, Ciudad de Guatemala" type="text">
                   </div>
                 </div>
               </div>
               <div class="row">
                 <div class="col-lg-4">
                   <div class="form-group">
-                    <label class="form-control-label" for="input-city">City</label>
-                    <input type="text" id="input-city" class="form-control form-control-alternative" placeholder="City" value="New York">
+                    <label class="form-control-label" for="input-city">Ciudad</label>
+                    <input type="text" id="input-city" class="form-control form-control-alternative" placeholder="City" value="Ciudad de Guatemala">
                   </div>
                 </div>
                 <div class="col-lg-4">
                   <div class="form-group">
-                    <label class="form-control-label" for="input-country">Country</label>
-                    <input type="text" id="input-country" class="form-control form-control-alternative" placeholder="Country" value="United States">
+                    <label class="form-control-label" for="input-country">País</label>
+                    <input type="text" id="input-country" class="form-control form-control-alternative" placeholder="Country" value="Guatemala">
                   </div>
                 </div>
                 <div class="col-lg-4">
                   <div class="form-group">
-                    <label class="form-control-label" for="input-country">Postal code</label>
+                    <label class="form-control-label" for="input-country">Código Postal</label>
                     <input type="number" id="input-postal-code" class="form-control form-control-alternative" placeholder="Postal code">
                   </div>
                 </div>
@@ -150,11 +150,11 @@
             </div>
             <hr class="my-4" />
             <!-- Description -->
-            <h6 class="heading-small text-muted mb-4">About me</h6>
+            <h6 class="heading-small text-muted mb-4">Sobre Mí</h6>
             <div class="pl-lg-4">
               <div class="form-group">
-                <label>About Me</label>
-                <textarea rows="4" class="form-control form-control-alternative" placeholder="A few words about you ...">A beautiful Dashboard for Bootstrap 4. It is Free and Open Source.</textarea>
+                <label>Sobre Mí</label>
+                <textarea rows="4" class="form-control form-control-alternative" placeholder="A few words about you ...">Graduado de Ingeniería en Informática y Sistemas.. Trabajando de piloto. Sí, así es.</textarea>
               </div>
             </div>
           </form>
