--- a/src/assets/scss/angular-differences/plugins/_ng-bootstrap.scss
+++ b/src/assets/scss/angular-differences/plugins/_ng-bootstrap.scss
@@ -136,7 +136,7 @@ ngb-datepicker {
             &.range{
               color: $white;
               &:hover{
-                background: #5e72e4;
+                background: #EB5E28;
               }
             }
             &.range-start{
@@ -172,7 +172,7 @@ ngb-datepicker {
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
   color: #fff;
-  background: #5e72e4;
+  background: #EB5E28;
   box-shadow: none;
   font-size: .875rem;
   width: 36px;
