--- a/src/app/layouts/auth-layout/auth-layout.component.html
+++ b/src/app/layouts/auth-layout/auth-layout.component.html
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-top navbar-horizontal navbar-expand-md navbar-dark">
     <div class="container px-4">
       <a class="navbar-brand" routerLinkActive="active" [routerLink]="['/dashboard']">
-        <img src="assets/img/brand/argon-white.png" />
+        <img src="assets/img/brand/white.png" />
       </a>
       <button class="navbar-toggler" type="button" (click)="isCollapsed=!isCollapsed"
          aria-controls="sidenav-collapse-main">
@@ -12,11 +12,11 @@
         <!-- Collapse header -->
         <div class="navbar-collapse-header d-md-none">
           <div class="row">
-            <div class="col-6 collapse-brand">
+            <!--<div class="col-6 collapse-brand">
               <a routerLinkActive="active" [routerLink]="['/dashboard']">
-                <img src="assets/img/brand/blue.png">
+                <img src="assets/img/brand/red.png">
               </a>
-            </div>
+            </div>-->
             <div class="col-6 collapse-close">
               <button type="button" class="navbar-toggler" (click)="isCollapsed=!isCollapsed" >
                 <span></span>
@@ -27,7 +27,7 @@
         </div>
         <!-- Navbar items -->
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
+          <!--<li class="nav-item">
             <a class="nav-link nav-link-icon" routerLinkActive="active" [routerLink]="['/dashboard']">
               <i class="ni ni-planet"></i>
               <span class="nav-link-inner--text">Dashboard</span>
@@ -50,7 +50,7 @@
               <i class="ni ni-single-02"></i>
               <span class="nav-link-inner--text">Profile</span>
             </a>
-          </li>
+          </li>-->
         </ul>
       </div>
     </div>
