--- a/src/assets/scss/custom/_variables.scss
+++ b/src/assets/scss/custom/_variables.scss
@@ -68,7 +68,7 @@ $grays: map-merge((
   "900": $gray-900
 ), $grays);
 
-$blue:    #5e72e4 !default;
+$blue:    #EB5E28 !default;
 $indigo:  #5603ad !default;
 $purple:  #8965e0 !default;
 $pink:    #f3a4b5 !default;
@@ -99,7 +99,7 @@ $colors: map-merge((
 ), $colors);
 
 $default:       #252422 !default;
-$primary:       #5e72e4 !default;
+$primary:       #EB5E28 !default;
 $secondary:     #f7fafc !default;
 $success:       $green !default;
 $info:          $teal !default;
